TestSuite/errors/err0001.pas
begin
var a := 1;
end.